# raycast_renderer

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
src/: CMakeLists.txt  core.hpp  win32main.cpp  win32main.hpp
src/core/: core.cpp  core.hpp
src/draw/: draw.hpp
src/logger/: logger.cpp  logger.hpp
src/math/: vector.cpp  vector.hpp
src/renderer/: renderer.cpp  renderer.hpp  scene.hpp
